--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/alejandrogoscu/MongoRedSocial#readme",
   "dependencies": {
+    "@faker-js/faker": "^9.9.0",
     "bcryptjs": "3.0.2",
     "cors": "^2.8.5",
     "dotenv": "16.5.0",
